# IntervalMap

./: .gitignore  .travis.yml  IntervalMap.cabal  LICENSE  README  README.md  changelog
.github/workflows/: ci.yml
Data/: Interval.hs  IntervalMap.hs  IntervalSet.hs
Data/IntervalMap/: Base.hs  Interval.hs  Lazy.hs  Strict.hs
Data/IntervalMap/Generic/: Base.hs  Interval.hs  Lazy.hs  Strict.hs
bench/: BenchAll.hs  BenchIntervalSet.hs  CompareRBImpl.hs  CompareTypes.hs  GenericLazyVsStrict.hs  IntRange.hs  IvMapSortedList.hs  RBColorInt.hs  RBColorIntBase.hs  RBColorNode.hs  RBColorNodeBase.hs  WeighAllocs.hs
examples/: Example.hs  Example.lhs  GenericExample.lhs  Makefile
test/: GenericIntervalTests.hs  IntervalMapTests.hs  IntervalSetTests.hs  IntervalTests.hs
www/: bench-all.html  index.html
