Name:                IntervalMap
Version:             0.1.0
Synopsis:            Maps from Intervals to values, with efficient search.
-- Description:         
Homepage:            http://www.chr-breitkopf.de/comp/IntervalMap
License:             BSD3
License-file:        LICENSE
Author:              Christoph Breitkopf
Maintainer:          chris@chr-breitkopf.de
-- Copyright:           
Category:            Data
Build-type:          Simple
Cabal-version:       >=1.8

extra-source-files:
  README
  test/*.hs
  examples/*.hs

Library
  Exposed-modules:     Data.Interval, Data.IntervalMap
  Build-depends:       base, containers, deepseq
  ghc-options: -Wall
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

Test-Suite TestInterval
  type:               exitcode-stdio-1.0
  main-is:            IntervalTests.hs
  hs-source-dirs:     test
  build-depends:      IntervalMap, base, QuickCheck, Cabal >= 1.9.2

Test-Suite TestIntervalMap
  type:               exitcode-stdio-1.0
  main-is:            IntervalMapTests.hs
  hs-source-dirs:     test
  build-depends:      IntervalMap, base, QuickCheck, Cabal >= 1.9.2
